changement img caroussel

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     <!-- CONTENT -->
     <div class="content container">
         <!-- Votre contenu de page ira ici -->
-        <h1>OCCULT - GOBLIN SHOP</h1>
 
         <!-- CAROUSEL -->
         <div id="carouselExample" class="carousel slide">
@@ -79,6 +78,8 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+
+        <h1>BIENVENU SUR LE GOBLIN SHOP</h1>
 
         <!-- AVIS -->
         <div class="row" id="avis">
