--- a/html/connexion.html
+++ b/html/connexion.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FAQ</title>
+    <title>CONNEXION</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/connexion.css">
@@ -13,7 +13,7 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <nav class="navbar navbar-expand navbar navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img src="../img/Logoinv.png" alt="Bootstrap" width="40" height="37">
@@ -46,6 +46,11 @@
                             <img src="../img/logoProfil.png" alt="">
                         </a>
                     </li>
+
+                    <li class="nav-link">
+                        <button id="toggleButton" class="nav-item btn btn-outline-dark"
+                            onclick="toggleTheme()">THEME</button>
+                    </li>
                 </ul>
 
             </div>
@@ -53,11 +58,11 @@
     </nav>
 
     <div class="content container">
-        
+
         <h1>CONNEXION</h1>
 
         <div class="container mt-5 formulaireConnexion">
-            
+
             <form>
                 <div class="form-group">
                     <label for="user">Nom d'utilisateur ou e-mail</label>
@@ -70,7 +75,7 @@
 
                 <div class="d-grid gap-2">
 
-                <button type="submit" class="btn btn-outline-success submitButton">Envoyer</button>
+                    <button type="submit" class="btn btn-outline-success submitButton">Envoyer</button>
                 </div>
             </form>
         </div>
@@ -80,14 +85,14 @@
 
 
     <!-- FOOTER -->
-    <footer class="globalFooter text-center text-white">
+    <footer class="globalFooter text-center">
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Text -->
             <section class="mb-4">
                 <p>
                     GIRAUD Eliott <br>
-                    <a class="text-white " href="mailto:eliott.giraud@hotmail.fr">Contactez nous !</a><br>
+                    <a href="mailto:eliott.giraud@hotmail.fr">Contactez nous !</a><br>
                 </p>
             </section>
         </div>
@@ -97,12 +102,20 @@
         </div>
     </footer>
 
-
-
     <!-- SCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+
+    <script>
+        function toggleTheme() {
+            var element = document.body;
+            element.classList.toggle("dark-mode");
+        }
+    </script>
+
+
+
 </body>
 
 </html>
