--- a/html/contact.html
+++ b/html/contact.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <nav class="navbar navbar-expand navbar navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img src="../img/Logoinv.png" alt="Bootstrap" width="40" height="37">
@@ -44,6 +44,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./connexion.html"><img src="../img/logoProfil.png" alt=""></a>
                     </li>
+
+                    <li class="nav-link">
+                        <button id="toggleButton" class="nav-item btn btn-outline-dark"
+                            onclick="toggleTheme()">THEME</button>
+                    </li>
                 </ul>
 
             </div>
@@ -73,21 +78,21 @@
                         placeholder="Écrivez votre message ici"></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary">Envoyer</button>
+                <button id="submitButton" type="submit" class="btn btn-dark">Envoyer</button>
             </form>
         </div>
 
     </div>
 
     <!-- FOOTER -->
-    <footer class="globalFooter text-center text-white">
+    <footer class="globalFooter text-center">
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Text -->
             <section class="mb-4">
                 <p>
                     GIRAUD Eliott <br>
-                    <a class="text-white " href="mailto:eliott.giraud@hotmail.fr">Contactez nous !</a><br>
+                    <a href="mailto:eliott.giraud@hotmail.fr">Contactez nous !</a><br>
                 </p>
             </section>
         </div>
@@ -101,6 +106,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+
+    <script>
+        function toggleTheme() {
+            var element = document.body;
+            element.classList.toggle("dark-mode");
+        }
+    </script>
+
+
 </body>
 
 </html>
