--- a/html/boutique.html
+++ b/html/boutique.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/boutique.css" />
+
 </head>
 
 <body>
@@ -25,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Acceuil</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="./boutique.html">Boutique</a>
@@ -202,30 +203,57 @@
     </script>
 
 
-<script>
-    function toggleTheme() {
-        var element = document.body;
-        element.classList.toggle("dark-mode");
+    <script>
+        function toggleTheme() {
+            var element = document.body;
+            element.classList.toggle("dark-mode");
 
-        var isDarkMode = element.classList.contains("dark-mode");
-        sessionStorage.setItem("darkMode", isDarkMode);
-    }
-
-    function applySavedTheme() {
-        var isDarkMode = sessionStorage.getItem("darkMode") === "true";
-        var element = document.body;
-
-        if (isDarkMode) {
-            element.classList.add("dark-mode");
-        } else {
-            element.classList.remove("dark-mode");
+            var isDarkMode = element.classList.contains("dark-mode");
+            sessionStorage.setItem("darkMode", isDarkMode);
         }
-    }
 
-    document.addEventListener("DOMContentLoaded", applySavedTheme);
+        function applySavedTheme() {
+            var isDarkMode = sessionStorage.getItem("darkMode") === "true";
+            var element = document.body;
 
-    window.addEventListener("popstate", applySavedTheme);
-</script>
+            if (isDarkMode) {
+                element.classList.add("dark-mode");
+            } else {
+                element.classList.remove("dark-mode");
+            }
+        }
+
+        document.addEventListener("DOMContentLoaded", applySavedTheme);
+
+        window.addEventListener("popstate", applySavedTheme);
+    </script>
+
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const cardImages = document.querySelectorAll('.card-img-top');
+
+            cardImages.forEach((cardImage) => {
+                cardImage.addEventListener('mouseover', () => {
+                    cardImages.forEach((otherCard) => {
+                        if (otherCard !== cardImage) {
+                            otherCard.style.transition = 'filter 0.5s';
+                            otherCard.style.filter = 'grayscale(100%)';
+                        }
+                    });
+                });
+
+                cardImage.addEventListener('mouseleave', () => {
+                    cardImages.forEach((otherCard) => {
+                        otherCard.style.transition = 'filter 0.5s';
+                        otherCard.style.filter = 'grayscale(0%)';
+                    });
+                });
+            });
+        });
+    </script>
+
+
 
 </body>
 
