--- a/html/connexion.html
+++ b/html/connexion.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Acceuil</a>
+                        <a class="nav-link" href="../index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./boutique.html">Boutique</a>
