--- a/html/contact.html
+++ b/html/contact.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Acceuil</a>
+                        <a class="nav-link" href="../index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./boutique.html">Boutique</a>
@@ -138,7 +138,6 @@
 
         window.addEventListener("popstate", applySavedTheme);
     </script>
-
 
 </body>
 
